--- a/res/layout/start_sign_in.xml
+++ b/res/layout/start_sign_in.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical" >
 
     <EditText
-        android:id="@+id/userIDEditText"
+        android:id="@+id/usernameEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
@@ -20,15 +20,15 @@
         android:id="@+id/passwordEditText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/userIDEditText"
-        android:layout_alignRight="@+id/userIDEditText"
-        android:layout_below="@+id/confirmPasswordPromptTextView"
+        android:layout_alignLeft="@+id/usernameEditText"
+        android:layout_alignRight="@+id/usernameEditText"
+        android:layout_below="@+id/confirmPasswordTextView"
         android:layout_marginTop="26dp"
         android:ems="10"
         android:inputType="textPassword" />
 
     <TextView
-        android:id="@+id/userIDPromptTextView"
+        android:id="@+id/usernameTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
@@ -37,11 +37,11 @@
         android:text="@string/userIDPrompt" />
 
     <TextView
-        android:id="@+id/confirmPasswordPromptTextView"
+        android:id="@+id/confirmPasswordTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_below="@+id/userIDEditText"
+        android:layout_below="@+id/usernameEditText"
         android:layout_marginTop="17dp"
         android:text="@string/passwordPrompt" />
 
@@ -51,7 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="117dp"
-        android:layout_toRightOf="@+id/confirmPasswordPromptTextView"
+        android:layout_toRightOf="@+id/confirmPasswordTextView"
         android:text="@string/confirm" />
 
     <Button
@@ -60,7 +60,7 @@
         android:layout_height="wrap_content"
         android:layout_alignBaseline="@+id/signInConfirmButton"
         android:layout_alignBottom="@+id/signInConfirmButton"
-        android:layout_alignRight="@+id/userIDEditText"
+        android:layout_alignRight="@+id/usernameEditText"
         android:layout_marginRight="27dp"
         android:text="@string/cancel" />
 
