--- a/res/layout/items_list_item.xml
+++ b/res/layout/items_list_item.xml
@@ -9,10 +9,11 @@
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginTop="5dp"
-        android:layout_marginLeft="5dp"/>
+        android:layout_marginLeft="5dp"
+        android:contentDescription="@string/invoice"/>
 
     <LinearLayout
-        android:layout_width="170dp"
+        android:layout_width="135dp"
         android:layout_height="60dp"
         android:orientation="vertical" >
         
