--- a/res/layout/start_forgot_password.xml
+++ b/res/layout/start_forgot_password.xml
@@ -1,8 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@android:id/tabhost"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical" >
-    
 
-</LinearLayout>
+  	<LinearLayout
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent" 
+	    android:orientation="vertical" >
+	        
+       	<TabWidget android:id="@android:id/tabs"
+        	android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+     	</TabWidget>
+     	        
+        <FrameLayout android:id="@android:id/tabcontent"
+                android:layout_height="fill_parent"
+                android:layout_width="fill_parent">
+        </FrameLayout>        	    
+	
+	</LinearLayout>
+</TabHost>
