--- a/res/layout/list_item_button.xml
+++ b/res/layout/list_item_button.xml
@@ -2,15 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ff000000"
     android:orientation="vertical" >
 
-    <ImageView
-        android:id="@+id/imageView"
+    <Button
+        android:id="@+id/button"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:scaleType="fitXY"
-        android:contentDescription="@string/invoice" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
