--- a/res/layout/start_welcome.xml
+++ b/res/layout/start_welcome.xml
@@ -7,8 +7,8 @@
     <ImageView
         android:id="@+id/welcomeImageView"
         android:contentDescription="@string/background"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:scaleType="fitXY"
@@ -21,7 +21,7 @@
         android:layout_alignLeft="@+id/signUpButton"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="36dp"
-        android:text="@string/sign_in" />
+        android:text="@string/signIn" />
 
     <Button
         android:id="@+id/signUpButton"
@@ -29,6 +29,6 @@
         android:layout_height="wrap_content"
         android:layout_above="@+id/signInButton"
         android:layout_centerHorizontal="true"
-        android:text="@string/sign_up" />
+        android:text="@string/signUp" />
 
 </RelativeLayout>
