--- a/res/layout/tab_item.xml
+++ b/res/layout/tab_item.xml
@@ -4,7 +4,7 @@
     android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical"
-    android:id="@+id/textview"
+    android:id="@+id/textView"
     android:textSize="12sp"
     android:textColor="#ffffff" >
 
