--- a/res/menu/single_item.xml
+++ b/res/menu/single_item.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item 
-        android:id="@+id/action_submit_report" 
+        android:id="@+id/action_item" 
         android:title="@string/submit"
         android:showAsAction="always" >
     </item>
