finish sign up and sign in

--- a/res/layout/profile_change_password.xml
+++ b/res/layout/profile_change_password.xml
@@ -11,7 +11,7 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:ems="10"
-        android:hint="@string/oldPasswordPrompt"
+        android:hint="@string/inputOldPassword"
         android:inputType="textPassword" />
 
     <EditText
@@ -22,7 +22,7 @@
         android:layout_below="@+id/oldPasswordEditText"
         android:layout_marginTop="40dp"
         android:ems="10"
-        android:hint="@string/newPasswordPrompt"
+        android:hint="@string/inputNewPassword"
         android:inputType="textPassword" />
 
     <EditText
