--- a/res/layout/start_reset_password.xml
+++ b/res/layout/start_reset_password.xml
@@ -22,7 +22,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:ems="10"
-        android:hint="@string/newPasswordPrompt"
+        android:hint="@string/inputNewPassword"
         android:inputType="textPassword" />
 
     <EditText
@@ -33,7 +33,7 @@
         android:layout_below="@+id/newPasswordEditText"
         android:layout_marginTop="21dp"
         android:ems="10"
-        android:hint="@string/confirmPasswordPrompt"
+        android:hint="@string/inputConfirmPassword"
         android:inputType="textPassword" />
 
     <Button
