--- a/res/layout/reim_show_item.xml
+++ b/res/layout/reim_show_item.xml
@@ -17,7 +17,7 @@
             <TextView
                 android:id="@+id/amountTextView"
                 android:layout_width="wrap_content"                
-          		android:layout_height="0dp"
+          		android:layout_height="wrap_content"
             	android:textAppearance="?android:attr/textAppearanceLarge" />
 
             <CheckBox
