--- a/res/layout/reim_image.xml
+++ b/res/layout/reim_image.xml
@@ -3,14 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ff000000"
-    android:orientation="vertical" >
+    android:gravity="center" >
 
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:scaleType="fitXY"
         android:contentDescription="@string/invoice" />
 
 </LinearLayout>
