--- a/res/layout/report_edit.xml
+++ b/res/layout/report_edit.xml
@@ -31,8 +31,7 @@
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="60dp"
-        android:background="@drawable/ic_launcher"
-        android:text="@string/add" />
+        android:background="@drawable/add_button" />
 
     <Button
         android:id="@+id/cancelButton"
