--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -14,8 +14,9 @@
         android:id="@+id/addButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="350dp"
+        android:layout_marginBottom="30dp"
         android:background="@drawable/add_button" />
 
 </RelativeLayout>
