--- a/res/menu/save.xml
+++ b/res/menu/save.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
     <item 
-        android:id="@+id/action_item" 
-        android:title="@string/submit"
+        android:id="@+id/action_save_item" 
+        android:title="@string/save"
         android:showAsAction="always" >
     </item>
 
