--- a/res/layout/fragment_statistics.xml
+++ b/res/layout/fragment_statistics.xml
@@ -46,16 +46,15 @@
         android:layout_height="match_parent"
         android:baselineAligned="false"
         android:orientation="horizontal"
-        android:layout_weight="3"
-        >
+        android:layout_weight="3" >
         
          <LinearLayout
             android:id="@+id/month_charts"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:layout_weight="3"
             android:gravity="center"
-            android:orientation="horizontal" >
+            android:orientation="horizontal"
+        	android:padding="5dp"  >
         </LinearLayout>
     </LinearLayout>
 
