--- a/res/menu/reim.xml
+++ b/res/menu/reim.xml
@@ -8,11 +8,11 @@
         android:icon="@drawable/ic_action_search"
         app:showAsAction="always" >
     </item>
-    
+    <!--  
     <item 
         android:id="@+id/action_sort_item"
         android:title="@string/sort"
-        android:icon="@drawable/ic_action_filter"
+        android:icon="@drawable/ic_action_sort"
         app:showAsAction="always" >
     </item>
 
@@ -21,6 +21,6 @@
         android:title="@string/filter"
         app:showAsAction="always" 
         app:actionViewClass="android.widget.Spinner">  
-    </item>
+    </item>-->
     
 </menu>
