--- a/res/menu/report.xml
+++ b/res/menu/report.xml
@@ -5,7 +5,7 @@
     <item 
         android:id="@+id/action_sort_item"
         android:title="@string/sort"
-        android:icon="@drawable/ic_action_filter"
+        android:icon="@drawable/ic_action_sort"
         app:showAsAction="always" >
     </item>
 
