--- a/res/layout/reim_date_time.xml
+++ b/res/layout/reim_date_time.xml
@@ -10,6 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/chooseDate" />
+    <requestFocus />
 
     <DatePicker
         android:id="@+id/datePicker"
