add pull to refresh

--- a/res/menu/report.xml
+++ b/res/menu/report.xml
@@ -1,19 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto" >
-    
-    <item 
-        android:id="@+id/action_sort_item"
-        android:title="@string/sort"
-        android:icon="@drawable/ic_action_sort"
-        app:showAsAction="always" >
-    </item>
 
     <item
         android:id="@+id/action_filter_item"
         android:title="@string/filter"
-        app:showAsAction="always" 
-        app:actionViewClass="android.widget.Spinner">  
+        android:icon="@drawable/ic_action_filter"
+        app:showAsAction="always" >  
     </item>
     
 </menu>
