--- a/res/layout/fragment_reim.xml
+++ b/res/layout/fragment_reim.xml
@@ -5,11 +5,12 @@
     android:orientation="vertical" 
     android:id="@+id/baseLayout">
 
-    <ListView
+    <classes.XListView
         android:id="@+id/itemListView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" >
-    </ListView>
+        android:layout_height="wrap_content" 
+        android:cacheColorHint="#00000000" >
+    </classes.XListView>
 
     <Button
         android:id="@+id/addButton"
