--- a/res/layout/report_approve.xml
+++ b/res/layout/report_approve.xml
@@ -5,10 +5,10 @@
     android:orientation="vertical"
     android:id="@+id/approveBaseLayout" >
 
-    <ListView
+    <classes.XListView
         android:id="@+id/approveReportListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-    </ListView>
+    </classes.XListView>
 
 </RelativeLayout>
