--- a/res/layout/report_filter.xml
+++ b/res/layout/report_filter.xml
@@ -42,10 +42,10 @@
             android:text="@string/sortNull" />
 
         <RadioButton
-            android:id="@+id/sortDateRadio"
+            android:id="@+id/sortItemsCountRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sortDate" />
+            android:text="@string/sortItemsCount" />
 
         <RadioButton
             android:id="@+id/sortAmountRadio"
@@ -54,10 +54,17 @@
             android:text="@string/sortAmount" />
 
         <RadioButton
-            android:id="@+id/sortAmount1Radio"
+            android:id="@+id/sortCreateDateRadio"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/sortAmount" />
+            android:text="@string/sortCreateDate" />
+
+        <RadioButton
+            android:id="@+id/sortModifyDateRadio"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/sortModifyDate" />
+        
     </RadioGroup>
 
     <TextView
