--- a/res/layout/report_mine.xml
+++ b/res/layout/report_mine.xml
@@ -5,11 +5,11 @@
     android:orientation="vertical"
     android:id="@+id/mineBaseLayout" >
 
-    <ListView
+    <classes.XListView
         android:id="@+id/mineListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
-    </ListView>
+    </classes.XListView>
 
     <Button
         android:id="@+id/addButton"
