--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" >
 
     <FrameLayout
-        android:id="@+id/realtabcontent"
+        android:id="@+id/realTabContent"
         android:layout_width="fill_parent"
         android:layout_height="0dip"
         android:layout_weight="1" />
