--- a/res/layout/fragment_report.xml
+++ b/res/layout/fragment_report.xml
@@ -1,24 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@android:id/tabhost"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:id="@+id/baseLayout" >
 
-  	<LinearLayout
-	    android:layout_width="match_parent"
-	    android:layout_height="match_parent" 
-	    android:orientation="vertical" >
-	        
-       	<TabWidget android:id="@android:id/tabs"
-        	android:layout_width="wrap_content"
-            android:layout_height="wrap_content" >
-     	</TabWidget>
-     	        
-        <FrameLayout android:id="@android:id/tabcontent"
-                android:layout_height="fill_parent"
-                android:layout_width="fill_parent">
-        </FrameLayout>        	    
-	
-	</LinearLayout>
-</TabHost>
+    <FrameLayout
+        android:id="@+id/realTabContent"
+        android:layout_width="fill_parent"
+        android:layout_height="0dip"
+        android:layout_weight="1" />
+
+    <android.support.v4.app.FragmentTabHost
+        android:id="@android:id/tabhost"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+
+        <FrameLayout
+            android:id="@android:id/tabcontent"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="0" />
+    </android.support.v4.app.FragmentTabHost>
+
+</LinearLayout>
