--- a/res/layout/report_others.xml
+++ b/res/layout/report_others.xml
@@ -2,11 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/approveBaseLayout" >
+    android:orientation="vertical" >
 
     <classes.XListView
-        android:id="@+id/approveReportListView"
+        android:id="@+id/othersReportListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" >
     </classes.XListView>
