--- a/res/layout/list_item_report.xml
+++ b/res/layout/list_item_report.xml
@@ -1,38 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="horizontal" >
+    android:padding="10dp" >
 
     <LinearLayout
-        android:layout_width="114dp"
-        android:layout_height="60dp"
-        android:orientation="vertical" >
-        
-         <TextView android:id="@+id/titleTextView"    
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"    
-            android:textColor="#FF000000"  
-            android:textSize="13sp" />  
-            
-        <TextView android:id="@+id/dateTextView"    
-            android:layout_width="wrap_content"  
-            android:layout_height="wrap_content"    
-            android:textColor="#FF000000"  
-            android:textSize="15sp" />
-            
-    </LinearLayout>
-
-    <TextView
-        android:id="@+id/countTextView"
-        android:layout_width="46dp"
-        android:layout_height="58dp"
-        android:gravity="center"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_alignParentLeft="true"
         android:orientation="vertical" >
 
         <TextView
@@ -41,13 +17,44 @@
             android:layout_height="wrap_content"
             android:textColor="#FF000000"
             android:textSize="13sp" />
+        
+         <TextView android:id="@+id/titleTextView"    
+            android:layout_width="wrap_content"  
+            android:layout_height="wrap_content"    
+            android:textColor="#FF000000"  
+            android:textSize="22sp" />  
+            
+    </LinearLayout>
+
+    <TextView
+        android:id="@+id/countTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:orientation="vertical" >
+            
+        <TextView android:id="@+id/dateTextView"    
+            android:layout_width="wrap_content"  
+            android:layout_height="wrap_content"
+            android:layout_gravity="right" 
+            android:textColor="#FF000000"  
+            android:textSize="13sp" />
 
         <TextView
             android:id="@+id/amountTextView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="right"
             android:textColor="#FF000000"
             android:textSize="22sp" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
