--- a/res/values/mc_colors.xml
+++ b/res/values/mc_colors.xml
@@ -3,7 +3,7 @@
 
     <color name="mc_normal_text_white">#ffffffff</color>
     <color name="mc_event_gray">#808080</color>
-    <color name="mc_title">#44caaa</color>
+    <color name="mc_title">#cd5359</color>
     <color name="mc_chat_text">#010101</color>
     <color name="mc_chat_box_bg">#c9c9ce</color>
     <color name="mc_send_btn_bg">#595959</color>
